[package]
authors = ["Shinyzenith <aakashsensharma@gmail.com>"]
edition = "2021"
name = "waylevel"
version = "0.1.0"

[dependencies]
clap = "3.1"
serde = { version="1.0.136", features=["derive"] }
serde_json = "1.0.79"
smithay-client-toolkit = "0.15.3"

[[bin]]
name = "waylevel"
path = "src/waylevel.rs"
